--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,20 +4,31 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 2px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1d3;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #0077ff;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f10b;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #0f2539d6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* gradient background */
+
+.grad {
+  background: rgb(44, 55, 134);
+  background: linear-gradient(
+    174deg,
+    rgba(44, 55, 134, 1) 22%,
+    rgba(0, 0, 0, 0.8374999658066351) 77%
+  );
+}
